--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1.125rem;
     font-weight: normal;
 }
 
@@ -48,6 +49,7 @@ header {
 header h1 {
     font-size: 1.125rem;
     text-align: center;
+    text-transform: uppercase;
     width: 100%;
 }
 
