--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,9 @@
 
     --primary-text-color: rgb(52, 72, 84);
     --secondary-text-color: rgb(103, 120, 138);
+
+    --primary-link-color: rgb(40, 135, 225);
+    --primary-link-hover-color: rgb(32, 110, 185);
 }
 
 
@@ -30,9 +33,39 @@ ol, ul {
     list-style: none;
 }
 
+p {
+    margin-bottom: 1rem;
+}
+p:last-child {
+    margin: 0;
+}
+
 img {
     height: auto;
     max-width: 100%;
+}
+
+a {
+    outline: none;
+    text-decoration: none;
+}
+/* A link that has not been visited */
+a:link, 
+/* A link that has been visited */
+a:visited {
+    color: var(--primary-link-color);
+}
+/* A link that is hovered on */
+a:hover,
+/* A link that is selected */
+a:active {
+    color: var(--primary-link-hover-color);
+    text-decoration: underline;
+}
+
+ol, 
+ul {
+    list-style: none;
 }
 
 /* Header Styles */
@@ -72,6 +105,11 @@ section {
     color: var(--primary-text-color);
     font-size: 2.5rem;
     margin-bottom: 1.3125rem;
+}
+
+.social li {
+    display: inline-block;
+    font-size: 1.5rem;
 }
 
 
