--- a/public/style.css
+++ b/public/style.css
@@ -148,13 +148,13 @@ header h1 {
 }
 
 
+/* Role Section */
+.role-container {
+    display: flex;
+    flex-direction: column;
+}
 
 
-
-/* section > h1 {
-    font-size: 2rem;
-    margin-bottom: 1.3125rem;
-} */
 
 
 /* Footer Section */
@@ -214,6 +214,12 @@ footer a:active {
     .highlight > * {
         margin: 0 auto;
         width: 60%;
+    }
+
+    /* Role Section */
+    .role-container {
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 @media (min-width: 60em) {
