--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,7 @@ li {
     background-color: var(--background-color);
     border-radius: 5px;
     box-shadow: 0 5px 5px 0 hsla(200, 50%, 90%, 0.5), 0 0 0 1px hsla(200, 50%, 90%, 0.5);
+    padding: 4rem 1rem;
 }
 
 
@@ -124,8 +125,7 @@ li {
 
 
 /* Global Styles */
-section,
-.section {
+section {
     padding: 4rem 2rem;
 }
 
@@ -162,6 +162,7 @@ section,
 .flex-container {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     justify-content: space-between;
 }
 
@@ -206,8 +207,8 @@ header h1 {
 
 /* Role Section */
 .role {
+    flex: 1;
     margin-bottom: 1rem;
-    padding: 0 1rem;
 }
 
 
