--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,11 @@
-/*
-NOTES
-
-OOCSS: structure, size, style
-Think: btn, btn-large, btn-green
-
-*/
-
-
-
-
 /* CSS Variables */
 :root {
-    --header-min-height-mobile: 48px;
+    --background-color: #f5f5f7;
+    
+    /* --header-min-height-mobile: 48px;
     --header-min-height-desktop: 90px;
 
     --background: 0;
-    --background-color: hsl(0, 0%, 100%);
     --background-color-layer1: hsl(var(--background), 0%, 95%);
     --background-color-layer2: hsl(var(--background), 0%, 90%);
     --background-color-layer3: hsl(var(--background), 0%, 85%);
@@ -32,7 +22,7 @@ Think: btn, btn-large, btn-green
     --background-color-highlight: #6400f0;
     --text-color-highlight: hsl(0, 0%, 100%);
     --link-color-highlight: hsl(210, 40%, 88%);
-    --link-color-hover-highlight: hsl(210, 50%, 95%);
+    --link-color-hover-highlight: hsl(210, 50%, 95%); */
 }
 
 
@@ -98,192 +88,4 @@ ul {
 }
 li {
     margin-bottom: 1rem;
-}
-
-
-
-/* Utility Classes */
-.center {
-    text-align: center;
-}
-
-.overlay {
-    margin-top: -5rem;
-    padding: 1rem;
-}
-.outline {
-    background-color: var(--background-color);
-    border-radius: 5px;
-    box-shadow: 0 5px 5px 0 hsla(200, 50%, 90%, 0.5), 0 0 0 1px hsla(200, 50%, 90%, 0.5);
-    padding: 4rem 1rem;
-}
-
-
-
-
-
-
-
-/* Global Styles */
-section {
-    padding: 4rem 2rem;
-}
-
-.title {
-    font-size: 2rem;
-    font-weight: 800;
-    line-height: 1.125;
-    margin-bottom: 1.5rem;
-    text-align: center;
-}
-
-.title-large {
-    font-size: 2.5rem;
-}
-
-.subtitle {
-    font-size: 1.25rem;
-    font-weight: 300;
-    line-height: 1.5;
-    text-align: center;
-}
-
-.subtitle-large {
-    font-size: 1.5rem;
-}
-
-.padding-bottom-large {
-    padding-bottom: 10rem;
-}
-.margin-bottom {
-    margin-bottom: 1rem;
-}
-
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: space-between;
-}
-
-
-
-/* Header Styles */
-header {
-    align-items: center;
-    border-bottom: 1px solid rgba(22, 22, 22, .16);
-    display: flex;
-    justify-content: space-between;
-    line-height: 1.6875;
-    min-height: 48px;
-    padding: 0 1rem;
-}
-
-header h1 {
-    font-size: 1.125rem;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
-}
-
-
-/* Hero Section */
-
-/* Highlight Section, with colored background, white text */
-.highlight {
-    background-color: var(--background-color-highlight);
-    color: var(--text-color-highlight);
-}
-.highlight a:link,         /* A link that has not been visited */
-.highlight a:visited {     /* A link that has been visited */
-    color: var(--link-color-highlight);
-}
-.highlight a:hover,        /* A link that is hovered on */
-.highlight a:active {      /* A link that is selected */
-    color: var(--link-color-hover-highlight);
-}
-
-
-
-/* Role Section */
-.role {
-    flex: 1;
-    margin-bottom: 1rem;
-}
-
-
-
-
-/* Footer Section */
-.social {
-    margin-bottom: 2rem;
-    text-align: center;
-}
-.social li {
-    display: inline-block;
-    padding: 0 1rem;
-}
-
-
-
-
-
-/* Media Queries */
-
-@media (min-width: 50em) {
-    .max-width {
-        margin: 0 auto;
-        width: 60%;
-    }
-
-    .flex-container {
-        flex-direction: row;
-    }
-}
-@media (min-width: 60em) {
-    header {
-        min-height: 90px;
-        padding: 0 4rem;
-    }
-
-    header h1 {
-        font-size: 1.125rem;
-        width: auto;
-    }
-
-    .title-large {
-        font-size: 3rem;
-    }
-}
-
-
-
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: 0;
-        --background-color: hsl(var(--background), 0%, 7%);
-        --background-color-layer1: hsl(var(--background), 0%, 12%);
-        --background-color-layer2: hsl(var(--background), 0%, 17%);
-        --background-color-layer3: hsl(var(--background), 0%, 22%);
-        --background-color-layer4: hsl(var(--background), 0%, 27%);
-        
-        --text-color: hsl(205, 10%, 73%);
-        --text-color-secondary: hsl(205, 15%, 53%);
-
-        --link-color: hsl(209, 76%, 52%);
-        --link-color-hover: hsl(209, 71%, 43%); 
-        
-        --background-color-highlight: #b888fc;
-        --text-color-highlight: rgb(18, 18, 18);
-
-        --link-color-highlight: hsl(209, 69%, 20%);
-        --link-color-hover-highlight: hsl(209, 69%, 30%);
-    }   
-
-    .outline {
-        background-color: var(--background-color-layer1);
-        border: 1px solid var(--background-color-1);
-        box-shadow: none;
-    }
 }
