--- a/public/style.css
+++ b/public/style.css
@@ -89,3 +89,17 @@ ul {
 li {
     margin-bottom: 1rem;
 }
+
+
+
+
+
+
+.section {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.section-hero h1 {
+    font-size: clamp(1.5rem, 10vw, 5rem); 
+}
