--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 /* CSS Variables */
 :root {
     --background-color: #f5f5f7;
+
+
+    --section-padding: 1.2rem;
     
     /* --header-min-height-mobile: 48px;
     --header-min-height-desktop: 90px;
@@ -102,4 +105,36 @@ li {
 
 .section-hero h1 {
     font-size: clamp(1.5rem, 10vw, 5rem); 
+}
+
+
+
+
+.fun-fact {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    color: white;
+    padding: var(--section-padding);
+    
+}
+.fun-fact h3 {
+    font-size: 2rem;
+    font-weight: 100;
+    margin-bottom: 1.5rem;
+}
+.fun-fact > img {
+    display: block;
+    margin: 2rem auto 2rem auto;
+    padding: 0 2rem;
+    width: 200px;
+
+}
+
+@media screen and (min-width: 500px) {
+    .fun-fact {
+        display: flex;
+        padding: 2rem 6rem;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
