--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,15 @@
 /* CSS Variables */
+/* Common breakpoints: 480px, 768px, 1024px, and 1280px) */
+
 :root {
     --background-color: #f5f5f7;
 
+    --text-color: #000;
+
 
     --section-padding: 1.2rem;
+
+    --heading-color-primary: #2477e4;
     
     /* --header-min-height-mobile: 48px;
     --header-min-height-desktop: 90px;
@@ -52,9 +58,21 @@ body {
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    list-style: none;
     margin: 0;
     padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 1rem;
+}
+
+h2 {
+    font-size: 2rem;
 }
 
 p {
@@ -88,6 +106,7 @@ a:active {      /* A link that is selected */
 ol, 
 ul {
     list-style: none;
+    margin-bottom: 1.5rem;
 }
 li {
     margin-bottom: 1rem;
@@ -99,8 +118,7 @@ li {
 
 section,
 .section {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 3rem 1rem;
 }
 
 
@@ -116,6 +134,7 @@ section,
     margin-bottom: 1rem;
 }
 .hero h2 {
+    color: var(--heading-color-primary);
     font-size: clamp(1.6rem, 4vw, 3rem); 
     font-weight: 100;
     margin-bottom: 2rem;
@@ -125,33 +144,66 @@ section,
 
 
 .fun-fact {
+    display: flex;
+    align-items:center;
+    flex-direction: column;
+    justify-content: center;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     color: white;
-    padding: var(--section-padding);
-    
+    padding: 2rem;
 }
 .fun-fact h3 {
     font-size: 2rem;
     font-weight: 100;
-    margin-bottom: 1.5rem;
 }
-.fun-fact > img {
-    display: block;
-    margin: 2rem auto;
+.fun-fact img {
+    margin-top: 2rem;
     width: 200px;
-
 }
+
 
 @media screen and (min-width: 600px) {
     .fun-fact {
-        display: flex;
-        padding: 2rem 6rem;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: row;
     }
-
     .fun-fact > img {
+        margin: 0;
         padding-left: 2rem;
+    }
+}
+
+
+
+.history h3 {
+    color: var(--heading-color-primary);
+    font-size: 2rem;
+    font-weight: 200;
+    margin-bottom: 1rem;
+}
+
+
+
+.about-decade {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 2rem;
+}
+.about-decade li i {
+    display: block;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+@media screen and (min-width: 550px) {
+    .about-decade {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media screen and (min-width: 1000px) {
+    .about-decade {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
