--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,20 @@
 
 :root {
 
+    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --line-height: 1.5;
+    --font-size: 100%;
+    --font-weight: 400;
+    
+    --border-radius: 0.25rem; 
+    --border-width: 1px;
+    --outline-width: 3px;
+    
+    --spacing: 1rem;
+    --typography-spacing-vertical: 1.5rem;
+
+    --transition: 0.2s ease-in-out;
+
     --white: #ffffff;
     --lightgray: #f5f5f5;
     --darkgray: #1d1d1d;
@@ -17,6 +31,7 @@
 
     --text-color-primary: var(--darkgray);
     --text-color-secondary: hsl(205, 15%, 47%);
+    --text-color-alternative: rgb(36, 119, 228);
 
     --link-color: rgb(0, 102, 204);
 
@@ -28,14 +43,6 @@
     /*
     --header-min-height-mobile: 48px;
     --header-min-height-desktop: 90px;
-    */
-
-    /*
-    --background: 0;
-    --background-color-layer1: hsl(var(--background), 0%, 95%);
-    --background-color-layer2: hsl(var(--background), 0%, 90%);
-    --background-color-layer3: hsl(var(--background), 0%, 85%);
-    --background-color-layer4: hsl(var(--background), 0%, 80%);
     */
 }
 
@@ -56,36 +63,40 @@ html {
 body {
     background-color: var(--bg-color-primary);
     color: var(--text-color-primary);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 1.125rem;
-    font-weight: normal;
-    line-height: 1.3;
+    font-family: var(--font-family);
+    font-size: calc(var(--font-size) * 1.125);
+    font-weight: var(--font-weight);
+    line-height: var(--line-height);
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body {
     margin: 0;
-    padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-bottom: 1rem;
+h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    /* --typography-spacing-vertical: 2rem; */
 }
 h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    font-weight: 700;
+    /* --typography-spacing-vertical: 1.75rem; */
 }
 h3 {
-    color: var(--heading-color-primary);
     font-size: 2rem;
-    font-weight: 200;
+    font-weight: 100;
+    color: var(--text-color-alternative);
+    /* --typography-spacing-vertical: 1.5rem; */
+}
+h4 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    /* --typography-spacing-vertical: 1.25rem; */
 }
 
 p {
-    margin-bottom: 1rem;
+    margin-bottom: var(--spacing);
 }
 p:last-child {
     margin: 0;
@@ -114,7 +125,7 @@ a:active {      /* A link that is selected */
 ol, 
 ul {
     list-style: none;
-    margin-bottom: 1.5rem;
+    padding: 0;
 }
 
 
@@ -125,7 +136,11 @@ ul {
 /* Section Styles */
 section,
 .section {
-    padding: 4rem 1rem;
+    padding: 4rem var(--spacing);
+}
+section > *:first-child,
+.section > *:first-child {
+    margin-top: 0;
 }
 
 
@@ -136,8 +151,8 @@ section,
     background-color: transparent;
     border: 1px solid var(--white);
     border-radius: 5px;
-    margin: 0 1rem;
-    padding: 1rem 2rem;
+    margin: 0 var(--spacing);
+    padding: var(--spacing) 2rem;
     text-decoration: none;
 }
 .btn i {
@@ -160,13 +175,14 @@ section,
 }
 .hero h1 {
     font-size: clamp(1.5rem, 10vw, 5rem); 
-    margin-bottom: 1rem;
+    margin-bottom: var(--spacing);
 }
 .hero h2 {
     color: var(--heading-color-primary);
     font-size: clamp(1.6rem, 4vw, 3rem); 
     font-weight: 100;
-    margin-bottom: 2rem;
+    margin-bottom: calc(var(--spacing) * 2);
+    margin-top: 0;
 }
 
 
@@ -178,14 +194,14 @@ section,
 }
 .experience {
     display: grid;
-    gap: 1rem;
+    gap: var(--spacing);
     grid-template-columns: repeat(2, 1fr);
 }
 .experience li {
     background-color: var(--white);
     border: 1px solid #d0d0d0;
     border-radius: 5px;
-    padding: 1rem;
+    padding: var(--spacing);
 }
 .experience em {
     color: var(--heading-color-primary);
@@ -227,13 +243,15 @@ section,
     color: var(--white);
     font-size: 3rem;
     font-weight: 100;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 .aside img {
     margin-top: 2rem;
     width: 200px;
 }
 .resume span {
-    margin-bottom: 1rem;
+    margin-bottom: var(--spacing);
 }
 .resume a {
     color: var(--white);
@@ -258,23 +276,23 @@ section,
 .about-decade {
     display: grid;
     gap: 3rem;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     margin-bottom: 4rem;
 }
 .about-decade i {
     display: block;
     font-size: 3rem;
-    margin-bottom: 1rem;
+    margin-bottom: var(--spacing);
     text-align: center;
 }
 @media screen and (min-width: 550px) {
     .about-decade {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 @media screen and (min-width: 1000px) {
     .about-decade {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
