--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,9 @@
 
 :root {
 
-    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --line-height: 1.5;
-    --font-size: 100%;
+    --font-size: 1rem;
     --font-weight: 400;
     
     --border-radius: 0.25rem; 
@@ -35,112 +35,147 @@
 
     --link-color: rgb(0, 102, 204);
 
-
     --section-padding: 1.2rem;
-
     --heading-color-primary: var(--blue);
-    
-    /*
-    --header-min-height-mobile: 48px;
-    --header-min-height-desktop: 90px;
-    */
 }
+
 
 
 
 
 /* Minimal CSS Reset */
-* {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
 }
 
-html {
-    font-size: 100%;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-}
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+    display: block;
+  }
 
 body {
     background-color: var(--bg-color-primary);
     color: var(--text-color-primary);
     font-family: var(--font-family);
-    font-size: calc(var(--font-size) * 1.125);
+    font-size: var(--font-size);
     font-weight: var(--font-weight);
     line-height: var(--line-height);
+    margin: 0;
+    text-align: start;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-body {
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 .5rem 0;
+}
+
+p {
+    margin: 0 0 1rem 0;
+}
+p:last-child {
+    margin-bottom: 0;
+}
+
+pre,
+code,
+kbd,
+samp {
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 1em;
+}
+
+small {
+    font-size: 80%;
+}
+
+ul,
+ol,
+dl {
+    margin: 0 0 1rem 0;
+    padding-left: 0;
+}
+
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
+}
+
+table {
+    border-collapse: collapse;
 }
 
 h1 {
     font-size: 3rem;
     font-weight: 700;
-    /* --typography-spacing-vertical: 2rem; */
 }
 h2 {
     font-size: 2.5rem;
     font-weight: 700;
-    /* --typography-spacing-vertical: 1.75rem; */
 }
 h3 {
     font-size: 2rem;
     font-weight: 100;
     color: var(--text-color-alternative);
-    margin-bottom: calc(var(--typography-spacing-vertical) / 2);
 }
 h4 {
     font-size: 1.5rem;
     font-weight: 300;
-    margin: calc(var(--typography-spacing-vertical) / 2) 0;
 }
 
-p {
-    margin-bottom: var(--spacing);
-}
-p:last-child {
-    margin: 0;
-}
 
 img {
+    border-style: none;
     height: auto;
     max-width: 100%;
+    vertical-align: middle;
 }
 
 a {
-    font-weight: 400;
+    background-color: transparent;
+    color: var(--link-color);
+    text-decoration: none;
     outline: none;
 }
 
 a:link,         /* A link that has not been visited */
 a:visited {     /* A link that has been visited */
     color: var(--link-color);
-    text-decoration: none;
+    text-decoration: underline;
 }
 a:hover,        /* A link that is hovered on */
 a:active {      /* A link that is selected */
     text-decoration: underline;
 }
 
-ol, 
-ul {
-    list-style: none;
-    padding: 0;
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
-
-
-
+/* ------------------------------------------------------------------------- */
 
 
 /* Section Styles */
 section,
 .section {
     padding: 4rem var(--spacing);
-}
-section > *:first-child,
-.section > *:first-child {
-    margin-top: 0;
 }
 
 
@@ -184,7 +219,7 @@ section > *:first-child,
 }
 .hero h2 {
     color: var(--heading-color-primary);
-    font-size: clamp(1.6rem, 4vw, 3rem); 
+    font-size: clamp(2rem, 5vw, 3.5rem); 
     font-weight: 100;
     margin-bottom: calc(var(--spacing) * 2);
     margin-top: 0;
@@ -195,11 +230,19 @@ section > *:first-child,
 
 
 /* What I Do Styles */
-.what-i-do {
+.char-limit {
+    max-width: 80ch;
+    margin: 0 auto;
+}
+
+.what-i-do,
+.highlights,
+.skill {
     background-color: var(--bg-color-secondary);
 }
 .experience {
     display: grid;
+    list-style: none;
     gap: var(--spacing);
 }
 .experience li {
@@ -245,6 +288,7 @@ section > *:first-child,
     flex-wrap: wrap;
     font-size: calc(var(--font-size) * .8);
     gap: calc(var(--spacing) / 4);
+    list-style: none;
 }
 .skills li {
     background: var(--blue);
@@ -294,7 +338,11 @@ section > *:first-child,
     display: grid;
     gap: 3rem;
     grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 4rem;
+    list-style: none;
+    margin-bottom: 6rem;
+}
+.about-decade:last-child {
+    margin-bottom: 0;
 }
 .about-decade i {
     display: block;
