--- a/public/style.css
+++ b/public/style.css
@@ -20,11 +20,13 @@
     --white: #ffffff;
     --lightgray: #f5f5f5;
     --darkgray: #1d1d1d;
+    --footergray: #3a3a3a;
     --blue: #2477e4;
     --orange: #f89626;
 
     --bg-color-primary: var(--white);
     --bg-color-secondary: var(--lightgray);
+    --bg-color-footer: var(--footergray);
 
     --btn-bg-primary: var(--blue);
     --btn-bg-cta: var(--orange);
@@ -174,7 +176,8 @@ textarea {
 
 /* Section Styles */
 section,
-.section {
+.section,
+.footer {
     padding: 4rem var(--spacing);
 }
 
@@ -380,3 +383,39 @@ section,
     width: 64px;
     float: left;
 }
+
+
+/* Footer Styles */
+.footer {
+    background-color: var(--bg-color-footer);
+    color: var(--lightgray);
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+@media screen and (min-width: 650px) {
+    .footer {
+        flex-direction: row;
+    }
+}
+
+.footer > * { 
+    flex: 1; 
+    justify-items: flex-end;
+}
+
+/* Contact Form Styles */
+.contact-form > * { 
+    display: block;
+}
+
+.contact-form > input,
+.contact-form > textarea { 
+    margin-bottom: var(--spacing);
+    padding: calc(var(--spacing) / 2);
+}
+
+.contact-form > button {
+    margin: 0;
+}
+
