--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,14 @@
     --footergray: #3a3a3a;
     --blue: #2477e4;
     --orange: #f89626;
+    
+    /* Warning/Success  */
+    --warning-bg: #e09e9e;
+    --warning-border: #573434;
+    --warning-text: #573434;
+    --success-bg: #8cc475;
+    --success-border: #024600;
+    --success-text: #024600;
 
     --bg-color-primary: var(--white);
     --bg-color-secondary: var(--lightgray);
@@ -206,6 +214,23 @@ section,
 }
 
 
+/* Message Status Styles */
+.success {
+    border: 1px solid var(--success-border);
+    background-color: var(--success-bg);
+    color: var(--success-text);
+    font-size: .8rem;
+    padding: var(--spacing);
+}
+
+.warning {
+    border: 1px solid var(--warning-border);
+    background-color: var(--warning-bg);
+    color: var(--warning-text);
+    font-size: .8rem;
+    padding: var(--spacing);
+}
+
 
 
 /* Hero Styles */
@@ -387,6 +412,7 @@ section,
 
 /* Footer Styles */
 .footer {
+    align-items: unset;
     background-color: var(--bg-color-footer);
     color: var(--lightgray);
     display: flex;
@@ -395,13 +421,13 @@ section,
 
 @media screen and (min-width: 650px) {
     .footer {
+        align-items: flex-end;
         flex-direction: row;
     }
 }
 
 .footer > * { 
     flex: 1; 
-    justify-items: flex-end;
 }
 
 /* Contact Form Styles */
@@ -417,5 +443,6 @@ section,
 
 .contact-form > button {
     margin: 0;
+    cursor: pointer;
 }
 
