--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
   }
@@ -448,5 +452,16 @@ section,
 .contact-form > button {
     margin: 0;
     cursor: pointer;
+}
+
+.footer-links a {
+    color: var(--lightgray);
+    font-size: 1.2rem;
+    display: block;
+    text-decoration: none;
+}
+.footer-links a:hover {
+    color: var(--darkgray);
+    text-decoration: underline;
 }
 
