--- a/public/style.css
+++ b/public/style.css
@@ -183,6 +183,14 @@ textarea {
   line-height: inherit;
 }
 
+button:disabled,
+button[disabled] {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    cursor: default;
+}
+
 /* ------------------------------------------------------------------------- */
 
 
